# spacejar-cli

./: .gitignore  README.md
python_package/: pyproject.toml  setup.py
rust/: Cargo.toml  version.txt
rust/binaries/darwin/aarch64-apple-darwin/: spacejar  spacejar-v0.1.0-darwin-aarch64.tar.gz.sha256
rust/binaries/darwin/x86_64-apple-darwin/: spacejar  spacejar-v0.1.0-darwin-x86_64.tar.gz.sha256
rust/binaries/linux/aarch64-unknown-linux-musl/: spacejar  spacejar-v0.1.0-linux-aarch64.tar.gz.sha256
rust/binaries/linux/x86_64-unknown-linux-musl/: spacejar  spacejar-v0.1.0-linux-x86_64.tar.gz.sha256
rust/binaries/windows/x86_64-pc-windows-gnu/: spacejar-v0.1.0-windows-x86_64.zip.sha256
rust/crates/cli/: Cargo.toml
rust/crates/config/: Cargo.toml
rust/crates/config/src/: lib.rs
rust/crates/dependency_manager/: Cargo.toml
rust/crates/executor/: Cargo.toml
rust/crates/file_system/: Cargo.toml
rust/crates/file_watcher/: Cargo.toml
rust/crates/job_manager/: Cargo.toml
rust/crates/logger/: Cargo.toml
rust/crates/remote/: Cargo.toml
rust/crates/secrets/: Cargo.toml
rust/crates/system_provisioner/: Cargo.toml
rust/crates/vcs/: Cargo.toml
rust/docker/darwin/aarch64/: Dockerfile.builder
rust/docker/darwin/x86_64/: Dockerfile.builder
rust/docker/linux/aarch64/: Dockerfile.builder  Dockerfile.test
rust/docker/linux/x86_64/: Dockerfile.builder  Dockerfile.test
rust/docker/windows/x86_64/: Dockerfile.builder
rust/scripts/installers/: install.ps1  install.sh
rust/src/: lib.rs  main.rs
rust/src/config/: mod.rs  spacejar_config.yml
(+1 files in other folders)
