[package]
name = "spacejar"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/cli",
    "crates/executor",
    "crates/vcs",
    "crates/file_system",
    "crates/file_watcher",
    "crates/dependency_manager",
    "crates/remote",
    "crates/secrets",
    "crates/system_provisioner",
    "crates/logger",
    "crates/job_manager",
    "crates/config",
]

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
anyhow = "1.0"
spacejar-config = { path = "./crates/config" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
